--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "example"
   },
   "scripts": {
-    "test": "jest"
+    "test": "mocha **/*.test.ts --require ts-node/register --ignore 'node_modules/**/*'"
   },
   "repository": {
     "type": "git",
@@ -24,15 +24,17 @@
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
-    "@jest/globals": "^29.3.1",
-    "@types/jest": "^29.2.3",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
+    "chai": "^4.3.7",
     "eslint": "^8.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.3.1",
+    "mocha": "^10.1.0",
+    "mocha-param": "^2.0.1",
     "prettier": "^2.7.1",
-    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
